# vaiexia-server

./: .gitattributes  .gitignore  Cargo.toml  deny.toml
.forgejo/workflows/: ci.yml  nightly.yml
.github/workflows/: system-behavior.yml
crates/vaiexia-priv-proto/: Cargo.toml
crates/vaiexia-priv-proto/src/: lib.rs  package_name.rs  proto.rs
crates/vaiexia-privd/: Cargo.toml
crates/vaiexia-privd/src/: allowlist.rs  exec.rs  handler.rs  main.rs  socket.rs
crates/vaiexia-server/: Cargo.toml
crates/vaiexia-server/benches/: hotpath.rs
crates/vaiexia-server/fuzz/: Cargo.toml
crates/vaiexia-server/fuzz/fuzz_targets/: audit_chain.rs  journal_line.rs  package_name.rs  pkg_list.rs  priv_request.rs  token_parse.rs  unit_name.rs
crates/vaiexia-server/src/: diag.rs  lib.rs  lifecycle.rs  main.rs  notify.rs  transport.rs
crates/vaiexia-server/src/api/: auth_methods.rs  dto.rs  jobs.rs  mod.rs  server_host.rs  server_jobs.rs  server_logs.rs  server_module.rs  server_packages.rs  server_services.rs
crates/vaiexia-server/src/audit/: file.rs  mod.rs
crates/vaiexia-server/src/auth/: bootstrap.rs  mod.rs  password.rs  persister.rs  policy.rs  ratelimit.rs  skeleton.rs  store.rs  token.rs  verifier.rs
crates/vaiexia-server/src/backend/: assemble.rs  capped.rs  error.rs  mock.rs  mod.rs  probe.rs  types.rs  unit_name.rs
crates/vaiexia-server/src/backend/logs/: cursor.rs  journald.rs  linux.rs  mod.rs
crates/vaiexia-server/src/backend/metrics/: mod.rs  sysinfo.rs
crates/vaiexia-server/src/backend/systemd/: linux.rs  manager.rs  mod.rs  unit.rs  watch.rs
crates/vaiexia-server/src/config/: load.rs  mod.rs  model.rs
crates/vaiexia-server/src/events/: jobs_pump.rs  logs_pump.rs  metrics_pump.rs  mod.rs  status_pump.rs  topics.rs
crates/vaiexia-server/tests/: adversarial_corpus.rs  auth_e2e.rs  backends_it.rs  contract_full.rs  contract_read.rs  host_info.rs  packaging_structural.rs  policy_coverage.rs  systemd_it.rs
docs/: INSTALL.md  THREAT-MODEL.md
packaging/polkit/: 50-vaiexia-manage-units.allowlist.rules.example  50-vaiexia-manage-units.rules
packaging/systemd/: vaiexia-privd.service  vaiexia-privd.socket  vaiexia-server.service
packaging/sysusers/: vaiexia.conf
packaging/tmpfiles/: vaiexia.conf
