[workspace]
resolver = "2"
members = ["crates/vaiexia-priv-proto", "crates/vaiexia-privd", "crates/vaiexia-server"]

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10", features = ["toml", "env"] }
async-trait = "0.1"
base64 = "0.22"
vaiexia-core = { path = "../vaiexia-core", features = ["server-http"] }
