[package]
name = "vaiexia-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "vaiexia_server"
path = "src/lib.rs"

[[bin]]
name = "vaiexia-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
vaiexia-core = { workspace = true }
blake3 = { workspace = true }
subtle = { workspace = true }
base32 = { workspace = true }
getrandom = { workspace = true }
argon2 = { workspace = true }
arc-swap = { workspace = true }
vaiexia-priv-proto = { path = "../vaiexia-priv-proto" }
uuid = { workspace = true }
sysinfo = { workspace = true }

# zbus is only linked on Linux (the systemd module is cfg-gated)
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }
futures-util = "0.3"

[features]
system-it = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
vaiexia-core = { workspace = true, features = ["ws"] }
futures = "0.3"
