[package]
name = "vaiexia-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "vaiexia_server"
path = "src/lib.rs"

[[bin]]
name = "vaiexia-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
vaiexia-core = { workspace = true, features = ["server-http"] }
blake3 = { workspace = true }
subtle = { workspace = true }
base32 = { workspace = true }
getrandom = { workspace = true }
argon2 = { workspace = true }
arc-swap = { workspace = true }
vaiexia-priv-proto = { path = "../vaiexia-priv-proto" }
uuid = { workspace = true }
sysinfo = { workspace = true }

# zbus is only linked on Linux (the systemd module is cfg-gated)
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }
futures-util = "0.3"

[features]
# TLS is enabled by default so the shipped binary supports the `https` listener
# (spec §5.3 opt-in-at-runtime). Building `--no-default-features` drops rustls/ring
# — used for the Windows-host Linux cross-check (ring needs a C cross-toolchain).
default = ["tls"]
tls = ["vaiexia-core/server-tls"]
system-it = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
vaiexia-core = { workspace = true, features = ["ws"] }
futures = "0.3"
rcgen = "0.14"
# `cargo_bench_support` is required for `cargo bench` to drive criterion; the
# rest of the default features (plotters/rayon HTML reports) are dead weight here.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "hotpath"
harness = false
